--- a/css/completo.css
+++ b/css/completo.css
@@ -1,21 +1,27 @@
 html{
-	font-size: 120%;
+	font-size: 100%;
 }
 
 body{
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 14px;
-	background-color: #171717;
+	background-color: #2d2d2d;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
+a{
+	color: white;
+}
 
 /*topo*/
 
 #logo{
-	width: 18%;
+	width: 5%;
 	float:left;
-	margin-top: 1%;
-	margin-left: 2%;
+	margin-top: 0.8%;
+	margin-left: 1%;
 	margin-bottom: 0.5%;
 }
 
@@ -35,44 +41,57 @@ body{
 
 /*-------------------------------------------menu.php----------------------------------------*/
 
+#navMenu{
+	background-color: #171717;
+	height: 71px;
+}
+
+#marginMenu{
+	margin-left: 7.5%;
+}
 
 .itemMenu{
-	width: 13.9%;
 	margin-bottom: 4%;
+	margin-top: 5px;
 	float: left;
-	font-size: 140%;
+	font-size: 125%;
 	color: #fff;
 	text-align: center;
 	padding: 1.2%;
-	background-color: none;
 }
 
 .itemMenu:hover{
-	font-size: 140%;
+	font-size: 125%;
 	color: #3299CC;
 	border-bottom: solid 2px #3299CC;
 
 }
 
 .pesquisa{
-	width: 15%;
+	width: 18%;
 	height: 25px;
-	margin-top: 1.2%;
+	float: left;
+	margin-top: 1.4%;
 	font-size: 18px;
 	background-color: #1d1d1d;
 	color: white;
 	border-color: white;
 	border-radius: 10px;
+	margin-left: 2%;
 }
 
-a{
+.link{
 	color: white;
 }
 
+.link:hover{
+	color: #3299CC;
+}
+
 #perfil{
-	width: 17%;
-	float: right;
-	margin-right: 1.5%;
+	width: 25%;
+	float: left;
+	margin-left: 44%;
 }
 
 #perfil label{
@@ -80,26 +99,46 @@ a{
 }
 
 #cadastrarLogin{
+	width: 100.7%;
 	font-size: 16px;
 	margin-top: 2%;
+	margin-left: 4%;
+}
+
+a:visited{
+	color: white;
 }
 
 .user{
-	margin-top: -8%;
 	color: white;
-	font-size: 22px;
+	font-size: 13px;
+}
+
+#naoTemSenha{
+	float: right;
+}
+
+.LoginDetalhe{
+	width: 23%;
+	border-left: 4px solid #3299CC;
+	color: white;
+	font-size: 23px;
+	margin-bottom: 10px;
 }
 
 .logout{
 	color: white;
-	font-size: 18px;
+	font-size: 12px;
 }
 
 .login_area{
 	width: 15%;
 	float: right;
-	margin-top: -8%;
 	margin-right: 4%;
+}
+
+#cadastraLoga{
+	margin-top: 15px;
 }
 
 .nomelogin{
@@ -107,17 +146,28 @@ a{
 	color: white;
 }
 
+.logarCadastrar{
+	color: white;
+	float: right;
+	font-size: 120%;
+	margin-top: 1.4%;
+	margin-right: 5%;
+	padding: 3px;	 
+}
+
 .login{
 	color: white;
-	margin-left: 1.7%;
-	margin-top: 11%;
 	background-color: #1d1d1d;
 	border: solid 2px white;
 	border-radius: 6px;
 }
 
+.fotoUpload{
+	color: white;
+}
+
 .text_logged{
-	background-color: #171717;
+	background-color: #2d2d2d;
 	font-size: 30px;
 	text-align: center;
 	color: white;
@@ -127,6 +177,7 @@ a{
 
 #body_login{
 	color: grey;
+	height: 200px;
 }
 
 .senha{
@@ -145,19 +196,54 @@ a{
 	margin-left: 1%;
 }
 
-.campoNovoUsuario, 
-.campoNovaResenha{
+.labelLogin{
+	margin-left: 4%;
+}
+
+.campoNovoUsuario /*, 
+.campoNovaResenha*/{
 	margin-left: 1%;
 	margin-bottom: 2%;
 	width: 30%;
 	height: 25px;
 }
 
-.submitNovoUsuario,
-.submitNovaResenha{
+.campoLogin{
+	margin-left: 4%;
+	margin-bottom: 2%;
+	width: 100%;
+	height: 25px;
+}
+
+.submitLogin{
+	margin-left: 4%;
+	width: 100.7%;
+	height: 25px
+}
+
+.submitPesquisa{
+	height: 25px;
+	float: left;
+	margin-top: 1.4%;
+	font-size: 18px;
+	background-color: #1d1d1d;
+	color: white;
+	border-color: white;
+	border-radius: 10px;
+	margin-left: 0.1%;
+}
+
+.submitNovoUsuario /*,
+.submitNovaResenha */{
 	margin-left: 1%;
 	width: 30%;
 	height: 25px
+}
+
+.submitNovaAvaliacao{
+	width: 17%;
+	height: 25px;
+	margin-bottom: 5%;
 }
 
 /*-------------------------------------index.php-------------------------------------------*/
@@ -167,13 +253,20 @@ a{
 }
 
 .tituloFonte{
-	text-shadow: 2px 2px #000;
-	color: white;
 	width: 25%;
 	margin-left: 37.5%;
 	margin-bottom: 6%;
 	font-size: 28px;
 	border-bottom: 2px solid #3299CC;
+	color: white;
+}
+
+.tituloFontePesquisa{
+	margin-bottom: 6%;
+	font-size: 28px;
+	border-bottom: 2px solid #3299CC;
+	color: white;
+	text-align: center;
 }
 
 .title_c{
@@ -307,13 +400,8 @@ a{
 
 .logoJogos{
 	float: left;
-	width: 75%;
+	width: 100%;
 }
-
-.eav{
-
-}
-
 
 
 /*-------------------------------------pagina--------------------------------------*/
@@ -381,34 +469,14 @@ a{
 	font-size: 25px;
 }
 
-
-.drpdwn1 ul li{
-	margin-top: 1.5%;
-}
-.drpdwn2 ul li{
-	margin-top: 1.5%;
-}
-.drpdwn3 ul li{
-	margin-top: 1.5%;
-}
-.drpdwn4 ul li{
-	margin-top: 1.5%;
-}
-
-
-
-
-.drpdwn1 ul li a{
+ul li a{
 	text-decoration: none;
+	font-size: 25px;
 }
-.drpdwn2 ul li a{
-	text-decoration: none;
-}
-.drpdwn3 ul li a{
-	text-decoration: none;
-}
-.drpdwn4 ul li a{
-	text-decoration: none;
+
+ul li{
+	margin-top: 1.5%;
+	text-align: center;
 }
 
 #ul{
@@ -418,12 +486,14 @@ a{
 
 
 .itemCategoria{
-	text-shadow: 2px 2px #000;
-	color: white;
 	width: 97%;
 	margin-left: 3%;
 	margin-top: 3%;
 	font-size: 28px;
+}
+.nomeCategoria{
+	color: white;
+	text-shadow: 2px 2px black;
 }
 
 .nomeCategoria:hover{
@@ -453,9 +523,14 @@ a{
 }
 
 .centralizaCadastroResenha{
-	margin-left: 3%;
+	margin-left: 35%;
 	float: left;
-	width: 100%;
+	width: 97%;
+}
+.centralizaCadastroLogin{
+	margin-left: 37%;
+	float: left;
+	width: 97%;
 }
 
 .descricao{
@@ -506,6 +581,12 @@ a{
 	margin-bottom: 3%;
 }
 
+.titleMarginAvaliacao{
+	text-shadow: 2px 2px #000;
+	margin-left: 1%;
+	margin-bottom: 1%;
+}
+
 .generoMargin{
 	text-shadow: 2px 2px #000;
 	margin-top: -2%;
@@ -549,6 +630,7 @@ a{
 	margin-left: 30px;
 	margin-top: 30px;
 
+
 }
 
 .imagensTitle{
@@ -557,13 +639,17 @@ a{
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
+.imgBackground{
+	background-color: #171717;
+	height: 335px;
+}
 
 .imagemProj{
 	float: left;
-	width: 400px;
-	height: 200px;
+	width: 25%;
 	margin-left: 5.7%;
 	margin-bottom: 5%;
+	margin-top: 1.5%;
 }
 
 
@@ -571,10 +657,11 @@ a{
 	float: left;
 	width: 23%;
 	margin-right: 50px;
-	margin-left: 16.5%;
+	margin-left: 6%;
 	margin-bottom: 5%;
 	text-align: center;
 	border: 2px solid #3299CC;
+	background-color: #171717;
 
 }
 
@@ -590,18 +677,41 @@ a{
 	font-size: 15px;
 }
 
+
+/*-------------------------------------Avaliação--------------------------------------*/
+
+.estrelas{
+	margin-left: 4%;
+	font-size: 165%;
+}
+
+.estrelas input[type=radio]{
+	display: none;
+	
+}.estrelas label i.fa:before{
+	content: '\f005';
+	color: #3299CC;
+
+}.estrelas  input[type=radio]:checked  ~ label i.fa:before{
+	color: white;
+
+}
+
+/*-------------------------------------Avaliação--------------------------------------*/
+
+
 /*-------------------------------------rodape--------------------------------------*/
 
 #rodape{
-	position: relative;
-	background-color: #3299CC;
 	width: 100%;
 	height: 200px;
+	position: absolute;
+	background-color: #171717;
 	border-top: #000 solid 2px;
-	margin-top: 20%;
+	margin-top: 10%;
 	padding: 35px 0px;
 
-	opacity: 0.5;
+	opacity: 0.7;
 }
 
 #indexSemNada{
