--- a/css/completo.css
+++ b/css/completo.css
@@ -3,6 +3,7 @@ html{
 }
 
 body{
+	width: 100%;
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 14px;
 	background-color: #2d2d2d;
@@ -36,6 +37,7 @@ a{
 	clear: both;
 	color: transparent;
 	height: 0px;
+	pointer-events: none;
 }
 
 
@@ -43,7 +45,9 @@ a{
 
 #navMenu{
 	background-color: #171717;
-	height: 71px;
+	height: 66px;
+	top: 0;
+	
 }
 
 #marginMenu{
@@ -51,8 +55,6 @@ a{
 }
 
 .itemMenu{
-	margin-bottom: 4%;
-	margin-top: 5px;
 	float: left;
 	font-size: 125%;
 	color: #fff;
@@ -67,16 +69,27 @@ a{
 
 }
 
+.imgFundo{
+	width: 100%;
+	height: 900px;
+	background-image: url(../imagens/to_the_moon2.jpg);
+	background-repeat: no-repeat;
+	background-position: left;
+	background-attachment: fixed;
+}
+
 .pesquisa{
-	width: 18%;
+
 	height: 25px;
 	float: left;
 	margin-top: 1.4%;
 	font-size: 18px;
-	background-color: #1d1d1d;
+	background-color: #171717;
 	color: white;
 	border-color: white;
-	border-radius: 10px;
+	border-left: none;
+	border-right: none;
+	border-top: none;
 	margin-left: 2%;
 }
 
@@ -100,7 +113,7 @@ a{
 
 #cadastrarLogin{
 	width: 100.7%;
-	font-size: 16px;
+	font-size: 12px;
 	margin-top: 2%;
 	margin-left: 4%;
 }
@@ -132,13 +145,9 @@ a:visited{
 }
 
 .login_area{
-	width: 15%;
+	width: 6%;
 	float: right;
-	margin-right: 4%;
-}
-
-#cadastraLoga{
-	margin-top: 15px;
+	margin-top: 0.2%;
 }
 
 .nomelogin{
@@ -200,8 +209,7 @@ a:visited{
 	margin-left: 4%;
 }
 
-.campoNovoUsuario /*, 
-.campoNovaResenha*/{
+.campoNovoUsuario{
 	margin-left: 1%;
 	margin-bottom: 2%;
 	width: 30%;
@@ -226,10 +234,12 @@ a:visited{
 	float: left;
 	margin-top: 1.4%;
 	font-size: 18px;
-	background-color: #1d1d1d;
+	background-color: #171717;
 	color: white;
 	border-color: white;
-	border-radius: 10px;
+	border-left: none;
+	border-right: none;
+	border-top: none;
 	margin-left: 0.1%;
 }
 
@@ -278,8 +288,8 @@ a:visited{
 	clear: both;
 }
 
-#myCarousel{
-	width: 100%;
+.myCarousel{
+	width: 70%;
 }
 
 .img_carrossel{
@@ -534,10 +544,10 @@ ul li{
 }
 
 .descricao{
-	margin-left: 1%;
 	margin-bottom: 2%;
 	height: 155px;
 	width: 30%;
+	margin-left: 1%;
 }
 
 .labelNovaResenha{
@@ -620,7 +630,7 @@ ul li{
 
 .botaoDetalhes:hover{
 	color: white;
-	background-image: url(Background.jpg);
+	background-image: url(imagens/background.jpg);
 }
 
 
@@ -629,8 +639,6 @@ ul li{
 .imagens{
 	margin-left: 30px;
 	margin-top: 30px;
-
-
 }
 
 .imagensTitle{
@@ -639,6 +647,7 @@ ul li{
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
+
 .imgBackground{
 	background-color: #171717;
 	height: 335px;
@@ -651,7 +660,6 @@ ul li{
 	margin-bottom: 5%;
 	margin-top: 1.5%;
 }
-
 
 .nota{
 	float: left;
@@ -688,17 +696,107 @@ ul li{
 .estrelas input[type=radio]{
 	display: none;
 	
-}.estrelas label i.fa:before{
+}
+.estrelas label i.fa:before{
 	content: '\f005';
 	color: #3299CC;
 
-}.estrelas  input[type=radio]:checked  ~ label i.fa:before{
+}
+.estrelas  input[type=radio]:checked  ~ label i.fa:before{
 	color: white;
 
 }
 
 /*-------------------------------------Avaliação--------------------------------------*/
 
+/*-------------------------------------Curtir--------------------------------------*/
+
+.formCurtida{
+	float: right;
+	width: 10%;
+	margin-top: -4%;
+	margin-right: 2%;
+}
+
+/*-------------------------------------Curtir--------------------------------------*/
+
+/*-------------------------------------Comentários--------------------------------------*/
+
+#div_coment{
+	width: 90%;
+	margin-left: 5%;
+}
+
+#section_coment{
+	margin-top: 5%;
+	height: 10px;
+}
+
+#titleComent{
+	font-size: 23px;
+	color: white;
+	width: 8%;
+	margin-left: 45.8%;
+}
+
+#hr_esquerda{
+	width: 39%;
+	border-color: #3299CC;
+	float: left;
+}
+
+#hr_direita{
+	width: 39%;
+	border-color: #3299CC;
+	float: right;
+}
+
+#sessao_coment{
+	margin-left: 10%;
+}
+
+#nome_ft_user{
+	height: 10%;
+	float: left;
+}
+
+.section_foto_user{
+	margin-top: 100px;
+}
+
+.user_img{
+	height: 50px;
+	width: 50px;
+}
+
+.nome_meu_user_coment{
+	color: white;
+	font-size: 15px;
+}
+
+#meu_coment{
+	background-color: #2d2d2d;
+	width: 50%;
+	height: 60px;
+	color: white;
+}
+
+.coment_outros{
+	width: 50%;
+	height: 60px;
+	color:white;
+	font-size: 15px;
+}
+/*-------------------------------------Comentários--------------------------------------*/
+
+/*-------------------------------------Rank_Editores--------------------------------------*/
+.foto_editor{
+	width: 71 px;
+	height: 70 px;
+	margin-left: 35%;
+}
+
+/*-------------------------------------Rank_Editores--------------------------------------*/
 
 /*-------------------------------------rodape--------------------------------------*/
 
@@ -715,7 +813,7 @@ ul li{
 }
 
 #indexSemNada{
-	height: 250px;
+	height: 200px;
 	color: transparent;
 	background-color: transparent;
 }
